<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/transaction"
    tools:context=".Transaction">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="7dp"
            android:layout_marginRight="29dp"
            android:layout_marginLeft="29dp">

            <TextView
                android:id="@+id/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make a Withdrawal"
                android:textSize="20sp"
                android:textColor="#777"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <Button
                android:id="@+id/m500"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="NGN500"
                android:onClick="go"/>

            <Button
                android:id="@+id/m1000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="NGN1000"
                android:textAllCaps="true"
                android:onClick="go"
                />
            <Button
                android:id="@+id/m2000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="NGN2000"
                android:onClick="go"/>

            <Button
                android:id="@+id/m3000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="NGN3000"
                android:textAllCaps="true"
                android:onClick="go"
                />
            <Button
                android:id="@+id/m5000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="NGN5000"
                android:onClick="go"/>

            <Button
                android:id="@+id/m10000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="NGN10000"
                android:textAllCaps="true"
                android:onClick="go"
                />
            <Button
                android:id="@+id/m20000"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="NGN20000"
                android:textAllCaps="true"
                android:onClick="go"
                />

            <Button
                android:id="@+id/myvalue"
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Enter Amount you want"
                android:textAllCaps="true"
                />



        </LinearLayout>

    </ScrollView>



</LinearLayout>