<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".startactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="7dp"
        android:layout_marginRight="29dp"
        android:layout_marginLeft="29dp">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textSize="30sp"
            android:textColor="#777"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/edtextnumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:hint="create your 10 digit card number"
            android:maxLength="10"
            />

        <EditText
            android:id="@+id/edtextpin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:hint="create your 4 digit pin"
            android:maxLength="4"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/register"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="enter"
            />

    </LinearLayout>

</LinearLayout>